== 0.5.7 2009-06-17

 === Bugfixes
 
 * bugfix: Spork was allowing view eager-loading to happen during prefork in Rails 2.2.x, 2.3.x

== 0.5.6 2009-06-10

 === Bugfixes
 
 * bugfix: cucumber was logging to log/test.log, even though RAILS_ENV 'features' was specified

== 0.5.5 2009-06-10

 === Bugfixes
 
 * Rather than failing silently, Spork aborts the current running test process when a new run request is sent.

== 0.5.4 2009-06-08

 === Bugfixes
 
 * ApplicationHelper delayed loading was causing methods from Rails ApplicationHelper included modules weren't being registered in controller specs.  Fixed.

== 0.5.3 2009-06-08

 === Bugfixes
 
 * Spork.expanded_caller was flawed, and was causing a very strange regression fix where Spork.each_run block wouldn't load if it happened to occur on line 65.

== 0.5.2 2009-06-08

 === New Features
 
 * Cleaner backtrace in diagnostic mode
 
 === Bugfixes
 
 * Cucumber env.rb (and RSpec spec_helper.rb) are now able to set the environment via ENV['RAILS_ENV'] if they wish.
 * Rails config/routes.rb is no longer cached
 * Unknown application frameworks no longer blow up if not spork bootstrapped

== 0.5.1 2009-06-05

 === Bugfixes

 * "Trapped" ApplicationController loading wasn't working in Rails 2.1.0.
 * Rails 2.0.2 blew up.
 * Rails 2.3.2, 2.2.2, 2.1.2, 2.1.1, 2.1.0, 2.0.2 are all verified and tested (rake test_rails tests all 2.x rails gems you've installed)

== 0.5.0 2009-06-05

 === New Features

 * Diagnostic mode: run 'spork -d' to find out which project files will be preloaded, and where they are being loading from.
 * Better Rails integration: automatically delay loading of ApplicationController, observers, and entire app folder.  Also, automatically re-establish the database connection each run if ActiveRecord is being used.
 * Cucumber feature to test Spork from end to end (integrating with Rails)

== 0.4.4 2009-06-01

 === New Features
 
  * Return the result of run_tests by shipping it through a Unix socket pair
